[gd_scene load_steps=6 format=3 uid="uid://duayx8qhsg4hr"]

[ext_resource type="Script" path="res://ui/game_over/result_player.gd" id="1_i4vfa"]
[ext_resource type="Texture2D" uid="uid://dggkripedofsb" path="res://game_loop/main_river/game_over.webp" id="2_unhjk"]
[ext_resource type="Texture2D" uid="uid://c2ja5gmg3ljqk" path="res://players/players.webp" id="3_b5dtk"]
[ext_resource type="Theme" uid="uid://c2a7nkhpt7afl" path="res://ui/default_theme.tres" id="4_7q7ut"]
[ext_resource type="FontFile" uid="uid://b7fge08kxi2iv" path="res://ui/fonts/heading_bold.ttf" id="5_picsr"]

[node name="ResultPlayer" type="Node2D"]
script = ExtResource("1_i4vfa")

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("2_unhjk")
hframes = 2

[node name="PlayerIcon" type="Sprite2D" parent="."]
position = Vector2(-504, 0)
scale = Vector2(0.439998, 0.439998)
texture = ExtResource("3_b5dtk")
hframes = 4
vframes = 2
frame = 4

[node name="LabelRank" type="Label" parent="."]
offset_left = -337.0
offset_top = -96.0
offset_right = -118.0
offset_bottom = 98.0
theme = ExtResource("4_7q7ut")
theme_override_colors/font_color = Color(0.0342, 0.299313, 0.38, 1)
theme_override_fonts/font = ExtResource("5_picsr")
theme_override_font_sizes/font_size = 128
text = "#1"
vertical_alignment = 1

[node name="LabelTime" type="Label" parent="."]
offset_left = 105.0
offset_top = -96.0
offset_right = 615.0
offset_bottom = 98.0
theme = ExtResource("4_7q7ut")
theme_override_colors/font_color = Color(0.0342, 0.299313, 0.38, 1)
theme_override_fonts/font = ExtResource("5_picsr")
theme_override_font_sizes/font_size = 128
text = "00:00:00"
horizontal_alignment = 2
vertical_alignment = 1
